--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a id="member-list" class="anchor" href="#member-list" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>member list</h1>
 
 <ul>
-<li><a href="ouiyeah.github.io">ouiyeah</a></li>
+<li><a href="ouiyeah.github.io">zhang ye</a></li>
 </ul>
 
       <footer class="site-footer">
