--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         // setup connection to the ROS server and prepare the topic
         var ros = new ROSLIB.Ros();
 
-        var websocket = 'ws://192.168.1.7:9090';
+        var websocket = 'ws://192.168.1.9:9090';
 
         var shell_string = new ROSLIB.Topic({
             ros: ros,
@@ -78,7 +78,8 @@
                 });
 
                 var shell_string_msg = new ROSLIB.Message({
-                    data: 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Reseting local workspaces ..."; rm -rf ~/workspaces; mkdir -p ~/workspaces/hitrobot; cd ~/workspaces/hitrobot; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to fetch from workspaces ... This may take several minutes, please wait."; git clone https://github.com/hitrobotgroup/ros_org-indigo; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with workspaces."; rm -rf ~/catkin_ws; ln -s ~/workspaces/hitrobot/ros_org-indigo ~/catkin_ws; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linked to local workspaces."; ln -s ~/catkin_ws/install ~/catkin_ws/devel; source ~/.bashrc; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully."; roslaunch bringup bringup-boot.launch;',
+                    //data: 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Reseting local workspaces ..."; rm -rf ~/workspaces; mkdir -p ~/workspaces/hitrobot; cd ~/workspaces/hitrobot; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to fetch from workspaces ... This may take several minutes, please wait."; git clone https://github.com/hitrobotgroup/ros_org-indigo; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with workspaces."; rm -rf ~/catkin_ws; ln -s ~/workspaces/hitrobot/ros_org-indigo ~/catkin_ws; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linked to local workspaces."; ln -s ~/catkin_ws/install ~/catkin_ws/devel; source ~/.bashrc; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully."; roslaunch bringup bringup-boot.launch;',
+                    data: 'ping -c 4 -W 5 192.168.1.9 | xargs rostopic pub -1 /system_shell/shell_feedback std_msgs/String; read',
                 });
                 shell_string.publish(shell_string_msg);
             });
