--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
                 var shell_string_msg = new ROSLIB.Message({
                     //data: 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Reseting local workspaces ..."; rm -rf ~/workspaces; mkdir -p ~/workspaces/hitrobot; cd ~/workspaces/hitrobot; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to fetch from workspaces ... This may take several minutes, please wait."; git clone https://github.com/hitrobotgroup/ros_org-indigo; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with workspaces."; rm -rf ~/catkin_ws; ln -s ~/workspaces/hitrobot/ros_org-indigo ~/catkin_ws; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linked to local workspaces."; ln -s ~/catkin_ws/install ~/catkin_ws/devel; source ~/.bashrc; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully."; roslaunch bringup bringup-boot.launch;',
-                    data: 'ping -c 4 -W 5 192.168.1.9 | xargs rostopic pub -1 /system_shell/shell_feedback std_msgs/String; read',
+                    data: 'ping -c 4 -W 5 192.168.1.9 | xargs -I {} rostopic pub -1 /system_shell/shell_feedback std_msgs/String {}; read',
                 });
                 shell_string.publish(shell_string_msg);
             });
