--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
             document.getElementById("update_label").innerHTML = 'updating...';
             document.getElementById("main_content").innerHTML = '<p>Connecting to ' + websocket + ' ...</p>';
 
+            var is_first_connection = true;
+            var shell_string_msg = new ROSLIB.Message({
+                data: '',
+                //data: 'cd ~; mkdir -p workspaces/hitrobot/; cd workspaces/hitrobot/; if [ -d "release" ]; then cd release; git pull; _RC=$?; else git clone -b indigo https://github.com/hitrobotgroup/release; _RC=$?; if [ $_RC -eq 0 ]; then cd ~; rm catkin_ws; ln -s workspaces/hitrobot/release catkin_ws; fi; fi; if [ $_RC -eq 0 ]; then _FB="success"; else _FB="failure"; fi; rostopic pub -1 /system_shell/shell_feedback std_msgs/String $_FB; unset _RC; unset _FB;',
+                //data: 'ping -c 1 -W 5 www.github.com | xargs -I {} rostopic pub -1 /system_shell/shell_feedback std_msgs/String {}; read',
+                //data: 'source ~/.bashrc; rosnode kill -a; gnome-terminal -x bash -c "roslaunch bringup bringup-boot.launch;"; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully.";',
+            });
+            
             ros.connect(websocket);
 
             ros.on('connection', function () {
@@ -76,9 +84,13 @@
 
                 shell_feedback.subscribe(function (shell_feedback_msg) {
                     if ("success" == shell_feedback_msg.data) {
-                        document.getElementById("update_label").innerHTML = 'bingo updated';
+                    	shell_feedback.unsub
                         shell_string_msg.data = 'rosnode kill -a; roslaunch bringup bringup.launch;';
                         shell_string.publish(shell_string_msg);
+                        document.getElementById("update_label").innerHTML = 'bingo updated';
+                        setTimeout(function () {
+                        	ros.connect(websocket);
+                        });
                     } else if ("failure" == shell_feedback_msg.data) {
                         document.getElementById("update_label").innerHTML = 'report to us';
                     } else {
@@ -86,13 +98,15 @@
                     }
                 });
 
-                var shell_string_msg = new ROSLIB.Message({
-                    data: 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; cd ~; mkdir -p workspaces/hitrobot/; cd workspaces/hitrobot/; if [ -d "release" ]; then rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to pull from workspaces ... This may take several minutes, please wait."; cd release; git pull; _RC=$?; else rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to clone from workspaces ... This may take several minutes, please wait."; git clone -b indigo https://github.com/hitrobotgroup/release; _RC=$?; if [ $_RC -eq 0 ]; then rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linking to local workspaces ..."; cd ~; rm catkin_ws; ln -s workspaces/hitrobot/release/ catkin_ws; fi; fi; if [ $_RC -eq 0 ]; then rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with workspaces."; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully."; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Restarting websocket connection."; else rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Failed to synchronized with workspaces, please check the network connection."; fi; if [ $_RC -eq 0 ]; then _FB="success"; else _FB="failure"; fi; rostopic pub -1 /system_shell/shell_feedback std_msgs/String $_FB; unset _RC; unset _FB;',
-                    //data: 'cd ~; mkdir -p workspaces/hitrobot/; cd workspaces/hitrobot/; if [ -d "release" ]; then cd release; git pull; _RC=$?; else git clone -b indigo https://github.com/hitrobotgroup/release; _RC=$?; if [ $_RC -eq 0 ]; then cd ~; rm catkin_ws; ln -s workspaces/hitrobot/release catkin_ws; fi; fi; if [ $_RC -eq 0 ]; then _FB="success"; else _FB="failure"; fi; rostopic pub -1 /system_shell/shell_feedback std_msgs/String $_FB; unset _RC; unset _FB;',
-                    //data: 'ping -c 1 -W 5 www.github.com | xargs -I {} rostopic pub -1 /system_shell/shell_feedback std_msgs/String {}; read',
-                    //data: 'source ~/.bashrc; rosnode kill -a; gnome-terminal -x bash -c "roslaunch bringup bringup-boot.launch;"; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully.";',
-                });
-                shell_string.publish(shell_string_msg);
+
+                if (is_first_connection) {
+                	is_first_connection = false;
+                    shell_string_msg.data = 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; cd ~; mkdir -p workspaces/hitrobot/; cd workspaces/hitrobot/; if [ -d "release" ]; then rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to pull from workspaces ... This may take several minutes, please wait."; cd release; git pull; _RC=$?; else rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to clone from workspaces ... This may take several minutes, please wait."; git clone -b indigo https://github.com/hitrobotgroup/release; _RC=$?; if [ $_RC -eq 0 ]; then rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linking to local workspaces ..."; cd ~; rm catkin_ws; ln -s workspaces/hitrobot/release/ catkin_ws; fi; fi; if [ $_RC -eq 0 ]; then rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with workspaces."; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Restarting websocket connection."; else rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Failed to synchronized with workspaces, please check the network connection."; fi; if [ $_RC -eq 0 ]; then _FB="success"; else _FB="failure"; fi; rostopic pub -1 /system_shell/shell_feedback std_msgs/String $_FB; unset _RC; unset _FB;';
+                    shell_string.publish(shell_string_msg);
+                } else {
+                    shell_string_msg.data = 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully.";';
+                    shell_string.publish(shell_string_msg);
+                }
             });
 
             ros.on('error', function (error) {
