--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
         // setup connection to the ROS server and prepare the topic
         var ros = new ROSLIB.Ros();
 
-        var websocket = 'ws://192.168.43.252:9090';
-
         var shell_string = new ROSLIB.Topic({
             ros: ros,
             name: '/system_shell/shell_string',
@@ -31,12 +29,6 @@
             name: '/system_shell/shell_feedback',
             messageType: 'std_msgs/String'
         });
-
-        var shell_string_msg = new ROSLIB.Message({
-            data: '',
-        });
-
-        var is_first_connection = true;
     </script>
 </head>
 
@@ -67,6 +59,18 @@
         </div>
     </div>
     <script>
+        var host_ip = window.location.hostname;
+        if (host_ip == '') {
+            host_ip = '192.168.0.7';
+        }
+        var websocket = 'ws://' + host_ip + ':9090';
+        //var websocket = 'ws://192.168.43.252:9090';
+
+        var is_first_connection = true;
+        var shell_string_msg = new ROSLIB.Message({
+            data: '',
+        });
+
         document.getElementById("update").addEventListener('click', update);
         function update(event) {
             document.getElementById("update").removeEventListener('click', update);
@@ -77,6 +81,9 @@
             ros.connect(websocket);
         }
 
+        //data: 'cd ~; mkdir -p workspaces/hitrobot/; cd workspaces/hitrobot/; if [ -d "release" ]; then cd release; git pull; _RC=$?; else git clone -b indigo https://github.com/hitrobotgroup/release; _RC=$?; if [ $_RC -eq 0 ]; then cd ~; rm catkin_ws; ln -s workspaces/hitrobot/release catkin_ws; fi; fi; if [ $_RC -eq 0 ]; then _FB="success"; else _FB="failure"; fi; rostopic pub -1 /system_shell/shell_feedback std_msgs/String $_FB; unset _RC; unset _FB;',
+        //data: 'ping -c 1 -W 5 www.github.com | xargs -I {} rostopic pub -1 /system_shell/shell_feedback std_msgs/String {}; read',
+        //data: 'source ~/.bashrc; rosnode kill -a; gnome-terminal -x bash -c "roslaunch bringup bringup-boot.launch;"; rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully.";',
         function shell_feedback_cb(shell_feedback_msg) {
             if ("success" == shell_feedback_msg.data) {
                 shell_string_msg.data = 'rosnode kill -a; roslaunch bringup bringup.launch;';
@@ -105,11 +112,43 @@
                                             rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to pull from workspaces ... This may take several minutes, please wait."; \
                                             cd release; git pull; _RC=$?; \
                                         else \
+                                            cat /etc/issue | grep 14.04 \
+                                            if [ $? -eq 0 ]; then \
+                                                _BRANCH="indigo"; \
+                                            fi; \
+                                            cat /etc/issue | grep 15.04 \
+                                            if [ $? -eq 0 ]; then \
+                                                _BRANCH="jade"; \
+                                            fi; \
+                                            cat /etc/issue | grep 16.04 \
+                                            if [ $? -eq 0 ]; then \
+                                                _BRANCH="kinetic"; \
+                                            fi; \
+                                            uname -m | grep arm \
+                                            if [ $? -eq 0 ]; then \
+                                                _BRANCH=$_BRANCH"-arm"; \
+                                            fi; \
                                             rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to clone from workspaces ... This may take several minutes, please wait."; \
-                                            git clone -b indigo https://github.com/hitrobotgroup/release; _RC=$?; \
+                                            git clone -b $_BRANCH https://github.com/hitrobotgroup/release; _RC=$?; \
+                                            unset _BRANCH; \
                                             if [ $_RC -eq 0 ]; then \
                                                 rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linking to local workspaces ..."; \
                                                 cd ~; rm -r catkin_ws; ln -s workspaces/hitrobot/release/ catkin_ws; \
+                                                if [[ whoami -eq "hitrobot" ]]; then \
+                                                    cd ~/catkin_ws/install/; \
+                                                    sudo chown root:root ./lib/stm32_driver/stm32_driver; \
+                                                    sudo chmod u+s ./lib/stm32_driver/stm32_driver; \
+                                                    _TTYS=`dmesg | awk \'/ttyS/{print $4}\'`; \
+                                                    sudo sed -i "s/\/dev\/ttySx/\/dev\/$_TTYS/" ./share/bringup/launch/will2/will2-base.launch; \
+                                                    unset _TTYS; \
+                                                    if [[ hostname -eq "hitrobot-will2" ]]; then \
+                                                        ; \
+                                                    else \
+                                                        sudo sed -i "2s/$(hostname)/hitrobot-will2/" /etc/hosts; \
+                                                        sudo sed -i -e "/$(hostname)/ c hitrobot-will2" /etc/hostname; \
+                                                        sudo hostname -F /etc/hostname; \
+                                                    fi; \
+                                                fi; \
                                             fi; \
                                         fi; \
                                         if [ $_RC -eq 0 ]; then \
