--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <script>
         var host_ip = window.location.hostname;
         if ('' == host_ip) {
-            host_ip = '192.168.0.7';
+            host_ip = '192.168.44.129';
         } else if ('hitrobotgroup.github.io' == host_ip) {
-            host_ip = '192.168.43.252';
+            host_ip = '192.168.43.7';
         }
         var websocket = 'ws://' + host_ip + ':9090';
 
@@ -84,10 +84,6 @@
 
         function shell_feedback_cb(shell_feedback_msg) {
             if ("success" == shell_feedback_msg.data) {
-//                shell_string_msg.data = 'rosnode kill -a; roslaunch bringup bringup-boot.launch;';
-                shell_string_msg.data = 'sudo reboot;';
-                shell_string.publish(shell_string_msg);
-                document.getElementById("update_label").innerHTML = 'bingo updated';
                 setTimeout(function () {
                     ros.connect(websocket);
                 }, 60000);
@@ -104,6 +100,13 @@
 
             if (is_first_connection) {
             	is_first_connection = false;
+            	//shell_string_msg.data = '\
+                //                        rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; \
+                //                                        sudo sed -i -e "/$(hostname)/ c ouiyeah-deimos" /etc/hostname; \
+            	//sudo sed -i "2s/$(hostname)/hitrobot-will2/" /etc/hosts; \
+                //                                        sudo hostname -F /etc/hostname; \
+                //                        rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; \
+                //                        read;';
             	shell_string_msg.data = '\
                                         rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Received from system_shell node."; \
             	                        cd ~; mkdir -p workspaces/hitrobot/; cd workspaces/hitrobot/; \
@@ -111,44 +114,39 @@
                                             rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to pull from workspaces ... This may take several minutes, please wait."; \
                                             cd release; git pull; _RC=$?; \
                                         else \
+                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to clone from workspaces ... This may take several minutes, please wait."; \
                                             _BRANCH=$ROS_DISTRO; \
                                             uname -m | grep arm; \
                                             if [ $? -eq 0 ]; then \
                                                 _BRANCH=$_BRANCH"-arm"; \
                                             fi; \
-                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Trying to clone from workspaces ... This may take several minutes, please wait."; \
                                             git clone -b $_BRANCH https://github.com/hitrobotgroup/release; _RC=$?; \
-                                            unset _BRANCH; \
-                                            if [ $_RC -eq 0 ]; then \
+                                        fi; \
+                                        if [ $_RC -eq 0 ]; then \
+                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with $_BRANCH branch."; \
+                                            if [[ `whoami` == hitrobot ]]; then \
+                                                rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Setting hitrobot hardware ..."; \
+                                                cd ~/catkin_ws/devel/; \
+                                                _TTYS=`dmesg | awk \'\\\'\'/ttyS/{print $4}\'\\\'\'`; \
+                                                sudo sed -i "s/\\\/dev\\\/ttySx/\\\/dev\\\/$_TTYS/" ./share/bringup/launch/will2/will2-base.launch; \
+                                                unset _TTYS; \
+                                                sudo chown root:root ./lib/stm32_driver/stm32_driver; \
+                                                sudo chmod u+s ./lib/stm32_driver/stm32_driver; \
+                                            fi; \
+                                            if [[ -n $_BRANCH ]]; then \
                                                 rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Linking to local workspaces ..."; \
                                                 cd ~; rm -rf catkin_ws; ln -s workspaces/hitrobot/release/ catkin_ws; \
-                                                if [[ `whoami` == hitrobot ]]; then \
-                                                    cd ~/catkin_ws/install/; \
-                                                    sudo chown root:root ./lib/stm32_driver/stm32_driver; \
-                                                    sudo chmod u+s ./lib/stm32_driver/stm32_driver; \
-                                                    _TTYS=`dmesg | awk \'\\\'\'/ttyS/{print $4}\'\\\'\'`; \
-                                                    sudo sed -i "s/\\\/dev\\\/ttySx/\\\/dev\\\/$_TTYS/" ./share/bringup/launch/will2/will2-base.launch; \
-                                                    unset _TTYS; \
-                                                    if [[ `hostname` != hitrobot-will2 ]]; then \
-                                                        sudo sed -i "2s/$(hostname)/hitrobot-will2/" /etc/hosts; \
-                                                        sudo sed -i -e "/$(hostname)/ c hitrobot-will2" /etc/hostname; \
-                                                        sudo hostname -F /etc/hostname; \
-                                                    fi; \
-                                                fi; \
                                                 cd ~/.config/autostart/; \
                                                 if [ -f "gnome-terminal.desktop" ]; then \
+                                                    rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Resetting autostart config ..."; \
                                                     mv gnome-terminal.desktop ros_org.desktop; \
-                                                    sed -i -e "s/Exec=.*/Exec=gnome-terminal -x .\/catkin_ws\/boot.sh/" ros_org.desktop; \
-                                                    sed -i -e "s/Name[en_US]=.*/Name[en_US]=ros_org/" ros_org.desktop; \
+                                                    sed -i -e "s/Exec=.*/Exec=gnome-terminal -x bash -c \'\\\'\'.\\\/catkin_ws\\\/boot.sh\'\\\'\'/" ros_org.desktop; \
+                                                    sed -i -e "s/Name\[en_US\]=.*/Name[en_US]=ros_org/" ros_org.desktop; \
                                                     sed -i -e "s/Name=.*/Name=ros_org/" ros_org.desktop; \
                                                 fi; \
                                             fi; \
-                                        fi; \
-                                        if [ $_RC -eq 0 ]; then \
-                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Synchronized with workspaces."; \
-                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Restarting websocket connection."; \
                                         else \
-                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Failed to synchronized with workspaces, please check the network connection."; \
+                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Failed to synchronized with $_BRANCH branch, please check the network connection."; \
                                         fi; \
                                         if [ $_RC -eq 0 ]; then \
                                             _FB="success"; \
@@ -156,11 +154,26 @@
                                             _FB="failure"; \
                                         fi; \
                                         rostopic pub -1 /system_shell/shell_feedback std_msgs/String $_FB; \
-                                        unset _RC; unset _FB;';
+                                        unset _FB; \
+                                        if [ $_RC -eq 0 ]; then \
+                                            rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Restarting websocket connection."; \
+                                            if [[ -n $_BRANCH ]]; then \
+                                                if [[ `whoami` == hitrobot ]]; then \
+                                                    if [[ `hostname` != hitrobot-will2 ]]; then \
+                                                        rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Changing hostname to hitrobot-will2 ..."; \
+                                                        sudo sed -i -e "/$(hostname)/ c hitrobot-will2" /etc/hostname; \
+                                                        sudo sed -i "2s/$(hostname)/hitrobot-will2/" /etc/hosts; \
+                                                    fi; \
+                                                fi; \
+                                            fi; \
+                                            sudo reboot; \
+                                        fi; \
+                                        unset _BRANCH; unset _RC;';
                 shell_string.publish(shell_string_msg);
             } else {
                 shell_string_msg.data = 'rostopic pub -1 /system_shell/shell_feedback std_msgs/String "Updated to the newest version successfully.";';
                 shell_string.publish(shell_string_msg);
+                document.getElementById("update_label").innerHTML = 'bingo updated';
             }
         });
 
